--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-red-contrib-bluetooth-serial",
+  "name": "node-red-contrib-bluetooth",
   "version": "0.0.4",
   "description": "A Node-RED node for sending messages over Bluetooth Classic serial",
   "dependencies": {
     "bluetooth-serial-port": "*"
   },
-  "main": "bluetooth-serial.js",
+  "main": "bluetooth.js",
   "directories": {
     "doc": "doc"
   },
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/banada/node-red-contrib-bluetooth-serial"
+    "url": "https://github.com/banada/node-red-contrib-bluetooth"
   },
   "keywords": [
     "node-red",
@@ -23,12 +23,12 @@
   ],
   "node-red": {
     "nodes": {
-      "bluetooth-serial": "bluetooth-serial.js"
+      "bluetooth": "bluetooth.js"
     }
   },
   "author": "Nathaniel Chen <nathanielchen1@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/banada/node-red-contrib-bluetooth-serial/issues"
+    "url": "https://github.com/banada/node-red-contrib-bluetooth/issues"
   }
 }
